force-app/main/default/objects/TermTable__c/TermTable__c.object-meta.xml
<CustomObject>
    <description>Tabella amministrativa per i processi Tari (Tabella Periodi Siebel)</description>
    <label>Tabella Periodi</label>
    <nameField>
        <displayFormat>TP - {000000}</displayFormat>
        <label>Numero Tabella Periodi</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tabelle Periodi</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>