force-app/main/default/objects/TermTable__c/fields/CriteriaX__c.field-meta.xml
<CustomField>
    <fullName>CriteriaX__c</fullName>
    <label>Criterio Periodo X</label>
    <length>63</length>
    <type>Text</type>
</CustomField>