force-app/main/default/objects/TermTable__c/fields/CriteriaY__c.field-meta.xml
<CustomField>
    <fullName>CriteriaY__c</fullName>
    <label>Criterio Periodo Y</label>
    <length>63</length>
    <type>Text</type>
</CustomField>