force-app/main/default/objects/TermTable__c/fields/DayX__c.field-meta.xml
<CustomField>
    <fullName>DayX__c</fullName>
    <label>Giorni X</label>
    <length>15</length>
    <type>Text</type>
</CustomField>