force-app/main/default/objects/TermTable__c/fields/DayY__c.field-meta.xml
<CustomField>
    <fullName>DayY__c</fullName>
    <label>Giorni Y</label>
    <length>15</length>
    <type>Text</type>
</CustomField>