force-app/main/default/objects/TermTable__c/fields/PopupY__c.field-meta.xml
<CustomField>
    <fullName>PopupY__c</fullName>
    <label>Testo Popup Y</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>