force-app/main/default/objects/TermTable__c/fields/PopupZ__c.field-meta.xml
<CustomField>
    <fullName>PopupZ__c</fullName>
    <label>Testo Popup Z</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>