force-app/main/default/objects/TermTable__c/fields/Subtype__c.field-meta.xml
<CustomField>
    <fullName>Subtype__c</fullName>
    <label>Sottotipo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>